Cambios en las fotografias de los destinos y las ilustraciones e iconos

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                         
                         <div class="box">
                             <img src="/media/imgs/ilustrations/joven_1280.png"  width="50%"  alt="">
-                            <h3>john deo</h3>
+                            <h3>Lucas Pellido</h3>
                             <p>Lorem ipsum dolor sit amet consectetur</p>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
@@ -465,19 +465,19 @@
                                 <i class="far fa-star"></i>
                             </div>
                             <div class="see-more">
-                                    <input>Ver</input>
+                                <input type="button" class="btn" value="Ver mas">
+                                </input>
                             </div>
                         </div>
-                    </div>
-                    <div class="gallery" id="galeria">
+                    </div>                    <div class="gallery" id="galeria">
                             <h1 class="heading">
-                                <span>R</span>
-                                <span>e</span>
-                                <span>s</span>
-                                <span>e</span>
-                                <span>ñ</span>
+                                <span>G</span>
                                 <span>a</span>
-                                <span>s</span>
+                                <span>l</span>
+                                <span>e</span>
+                                <span>r</span>
+                                <span>i</span>
+                                <span>a</span>
                                 
                             </h1>
                         <div class="card">
@@ -489,7 +489,7 @@
                             </div>
                             <div class="see-more">
                             <a href="./xtras/destinos/bariloche.html" class="btn">Ver mas</a>
-                            </div>
+                        </div>
                         </div>
                         <div class="card">
                             <div class="title">
