Agregado de grid para la seccion de reseñas y galeria

--- a/revygal.html
+++ b/revygal.html
@@ -34,149 +34,147 @@
             </script>
     </head>
     <body>
-       <div class="grilla" width="90%">
+       <div class="grilla" width="100%">
             <div class="item1" >
                 <p>Reseñas</p>
             </div>
             <div class="item2" >
-                <p>Galeria</p>
-            </div>
-            <div class="item3" >
-                <div class="box">
-                        <img src="/media/imgs/ilustrations/joven_1280.png"  width="100%"  alt="">
-                        <h3>Lucas Pellido</h3>
-                        <p>Viaje a Bariloche la semana del ...</p>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </div>
+                <div class="box" class="item2">
+                    <img src="/media/imgs/ilustrations/joven_1280.png"  width="30%"  alt="">
+                    <h3>Lucas Pellido</h3>
+                    <p>Lorem ipsum dolor sit </p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
                         <div class="see-more">
-                            <input type="button" class="btn" value="Ver mas">
-                            </input>
+                            <a href="./xtras/resenas.html" class="btn">Ver mas</a>
                         </div>
                 </div>
             </div>
+            <div class="item3" >
+                <p>Galeria</p>
+            </div>
             <div class="item4" >
-                <div class="card">
+                <div class="card" class="item4">
                     <div class="title">
-                        <h3 ><span>Bariloche</span></h3>
+                        <h3><span>Bariloche</span></h3>
                     </div>
                     <div class="pic">
-                        <img src="../media/imgs/photos/bari01.jpg" width="100%"></img>
+                        <img src="./media/imgs/photos/bari01.jpg" width="50%"></img>
                     </div>
                     <div class="see-more">
-                    <a href="./xtras/destinos/bariloche.html" class="btn">Ver mas</a>
+                        <a href="./xtras/destinos/bariloche.html" class="btn">Ver mas</a>
+                    </div>
                 </div>
             </div>
             <div class="item5" >
-                <div class="card">
+                 <div class="card" class="item5">
                     <div class="title">
-                        <h3 ><span>Calafate</span></h3>
+                        <h3 >El Calafate</h3>
                     </div>
                     <div class="pic">
-                        <img src="../media/imgs/photos/cala01.jpg" width="100%"></img>
+                        <img src="./media/imgs/photos/cala01.jpg" width="50%"></img>
                     </div>
                     <div class="see-more">
-                    <a href="./xtras/destinos/calafate.html" class="btn">Ver mas</a>
+                        <a href="./xtras/destinos/calafate.html" class="btn">Ver mas</a>
+                    </div>
                 </div>
             </div>
             <div class="item6" >
-                <div class="card">
+                <div class="card" class="item6">
                     <div class="title">
-                        <h3 ><span>Cataratas</span></h3>
+                        <h3 >Cataratas</h3>
                     </div>
                     <div class="pic">
-                        <img src="../media/imgs/photos/cata01.jpg" width="100%"></img>
+                        <img src="./media/imgs/photos/cata01.jpg" width="50%"></img>
                     </div>
                     <div class="see-more">
-                    <a href="./xtras/destinos/cataratas.html" class="btn">Ver mas</a>
+                        <a href="./xtras/destinos/cataratas.html" class="btn">Ver mas</a>
+                    </div>
                 </div>
             </div>
             <div class="item7" >
-                 <div class="card">
+                 <div class="card" class="item7">
                     <div class="title">
-                        <h3 ><span>Cordoba</span></h3>
+                        <h3 >Cordoba</h3>
                     </div>
                     <div class="pic">
-                        <img src="../media/imgs/photos/cord01.jpg" width="100%"></img>
+                        <img src="./media/imgs/photos/cord01.jpg" width="50%"></img>
                     </div>
                     <div class="see-more">
-                    <a href="./xtras/destinos/cordoba.html" class="btn">Ver mas</a>
+                        <a href="./xtras/destinos/cordoba.html" class="btn">Ver mas</a>
+                    </div>
                 </div>
             </div>
             <div class="item8" >
-                <div class="card">
+                <div class="card" class="item8">
                     <div class="title">
-                        <h3 ><span>Mar del Plata</span></h3>
+                        <h3 >Mar del Plata</h3>
                     </div>
                     <div class="pic">
-                        <img src="../media/imgs/photos/mdpl01.jpg" width="100%"></img>
+                        <img src="./media/imgs/photos/mdpl01.jpg" width="50%"></img>
                     </div>
                     <div class="see-more">
-                    <a href="./xtras/destinos/mardelplata.html" class="btn">Ver mas</a>
+                        <a href="./xtras/destinos/mardelplata.html" class="btn">Ver mas</a>
+                    </div>
                 </div>
             </div>
-            <div class="item9" >
-                <div class="card">
+               <div class="item9" >
+                <div class="card" class="item9">
                     <div class="title">
-                        <h3 ><span>Mendoza</span></h3>
+                        <h3 >Mendoza</h3>
                     </div>
                     <div class="pic">
-                        <img src="../media/imgs/photos/mend01.jpg" width="100%"></img>
+                        <img src="./media/imgs/photos/mend01.jpg" width="50%"></img>
                     </div>
                     <div class="see-more">
-                    <a href="./xtras/destinos/mendoza.html" class="btn">Ver mas</a>
+                        <a href="./xtras/destinos/mendoza.html" class="btn">Ver mas</a>
+                    </div>
                 </div>
             </div>
             <div class="item10" >
-                 <div class="card">
+                <div class="card" class="item10">
                     <div class="title">
-                        <h3 ><span>Puerto Madryn</span></h3>
+                        <h3 >Puerto Madryn</h3>
                     </div>
                     <div class="pic">
-                        <img src="../media/imgs/photos/mdry01.jpg" width="100%"></img>
+                        <img src="./media/imgs/photos/mdry01.jpg" width="50%"></img>
                     </div>
                     <div class="see-more">
-                    <a href="./xtras/destinos/puertomadryn.html" class="btn">Ver mas</a>
+                        <a href="./xtras/destinos/puertomadryn.html" class="btn">Ver mas</a>
+                    </div>
                 </div>
             </div>
             <div class="item11" >
-                <div class="card">
+                <div class="card" class="item11">
                     <div class="title">
-                        <h3 ><span>Salta & Jujuy</span></h3>
+                        <h3 >Salta y Jujuy</h3>
                     </div>
                     <div class="pic">
-                        <img src="../media/imgs/photos/saju00.jpg" width="100%"></img>
+                        <img src="./media/imgs/photos/saju01.jpg" width="50%"></img>
                     </div>
                     <div class="see-more">
-                    <a href="./xtras/destinos/saltayjujuy.html" class="btn">Ver mas</a>
+                        <a href="./xtras/destinos/saltayjujuy.html" class="btn">Ver mas</a>
+                    </div>
                 </div>
             </div>
             <div class="item12" >
-                <div class="card">
+                 <div class="card" class="item12">
                     <div class="title">
-                        <h3 ><span>Usuahia</span></h3>
+                        <h3>Usuahia</h3>
                     </div>
                     <div class="pic">
-                        <img src="../media/imgs/photos/usu01.jpg" width="100%"></img>
+                        <img src="./media/imgs/photos/usu01.jpg" width="50%"></img>
                     </div>
                     <div class="see-more">
-                    <a href="./xtras/destinos/usuahia.html" class="btn">Ver mas</a>
+                        <a href="./xtras/destinos/usuahia.html" class="btn">Ver mas</a>
+                    </div>
                 </div>
             </div>
-       </div>
-    
-
-        <footer>
-            <nav>
-                <hr/>
-                <p>Desarrollado por: Maroz.Dev - 2025 &copy; | 
-                    <a href="mailto:maroz.dev@gmail.com">email: maroz.dev@gmail.com</a>
-                </p>
-            </nav>
-        </footer> 
+       </div>    
     </body>
 </html>
