Se completo la seccion de galeria de imagenes con grid. Se realizaron modificaciones adicionales a las imagenes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </nav>
         </header>
         <main>
-            <div class="presentation-video">
+            <section class="presentation-video">
                     <video controls muted autoplay loop poster="" class="video">
                         <source src="./media/videos/cataratas.mp4" type="video/mp4">
                         Tu navegador no soporta la reproducción de video.
@@ -111,10 +111,8 @@
                     <p>Buscas salir de tu rutina? Escapate a alguno de estos fantásticos lugares.<br />
                         <span>Vive aventuras emocionantes e inigualables. Crea recuerdos inolvidables!</span>
                     </p>
-                </div>
-
+            </section>
                    <!-- DESTINOS -->
-
             <section class="destinations" id="destinos">
                 <h2 class="heading">
                     <span>D</span>
@@ -313,10 +311,7 @@
                     </div>
                 </div>
             </section>
-            <!-- FIN DESTINOS -->
-
             <!-- SECCION PAQUETES -->
-
            <section class="packages" id="paquetes">
 
                 <h2 class="heading">
@@ -380,8 +375,6 @@
                     </div>
                 </div>    
             </section>
-            <!-- FIN PAQUETES -->
-
             <!--  SECCION SERVICIOS. -->
             <section class="services" id="servicios">
                 <h1 class="heading">
@@ -434,9 +427,7 @@
                     </div>
                 </div>
             </section> 
-
-            <!-- TODO:  Aquí van las tarjetas de RESEÑAS y GALERIA -->
-            
+            <!--  RESEÑAS y GALERIA -->
             <section class="reviewsandgallery">               
                 <div class="grid-container" width="100%">
                     <div class="item1" >
@@ -444,7 +435,7 @@
                     </div>
                     <div class="item2" >
                         <div class="box" class="item2">
-                            <img src="/media/imgs/ilustrations/joven_1280.png"  width="30%"  alt="">
+                            <img src="/media/imgs/ilustrations/joven_1280.png"  width="40%"  alt="">
                             <h3>Lucas Pellido</h3>
                             <p>Lorem ipsum dolor sit </p>
                             <div class="stars">
@@ -468,7 +459,7 @@
                                 <h3><span>Bariloche</span></h3>
                             </div>
                             <div class="pic">
-                                <img src="./media/imgs/photos/bari01.jpg" width="50%"></img>
+                                <img src="./media/imgs/photos/bari01.jpg" width="100%"></img>
                             </div>
                             <div class="see-more">
                                 <a href="./xtras/destinos/bariloche.html" class="btn">Ver mas</a>
@@ -481,7 +472,7 @@
                                 <h3 >El Calafate</h3>
                             </div>
                             <div class="pic">
-                                <img src="./media/imgs/photos/cala01.jpg" width="50%"></img>
+                                <img src="./media/imgs/photos/cala01.jpg" width="100%"></img>
                             </div>
                             <div class="see-more">
                                 <a href="./xtras/destinos/calafate.html" class="btn">Ver mas</a>
@@ -494,7 +485,7 @@
                                 <h3 >Cataratas</h3>
                             </div>
                             <div class="pic">
-                                <img src="./media/imgs/photos/cata01.jpg" width="50%"></img>
+                                <img src="./media/imgs/photos/cata01.jpg" width="100%"></img>
                             </div>
                             <div class="see-more">
                                 <a href="./xtras/destinos/cataratas.html" class="btn">Ver mas</a>
@@ -507,7 +498,7 @@
                                 <h3 >Cordoba</h3>
                             </div>
                             <div class="pic">
-                                <img src="./media/imgs/photos/cord01.jpg" width="50%"></img>
+                                <img src="./media/imgs/photos/cord01.jpg" width="100%"></img>
                             </div>
                             <div class="see-more">
                                 <a href="./xtras/destinos/cordoba.html" class="btn">Ver mas</a>
@@ -520,7 +511,7 @@
                                 <h3 >Mar del Plata</h3>
                             </div>
                             <div class="pic">
-                                <img src="./media/imgs/photos/mdpl01.jpg" width="50%"></img>
+                                <img src="./media/imgs/photos/mdpl01.jpg" width="100%"></img>
                             </div>
                             <div class="see-more">
                                 <a href="./xtras/destinos/mardelplata.html" class="btn">Ver mas</a>
@@ -533,7 +524,7 @@
                                 <h3 >Mendoza</h3>
                             </div>
                             <div class="pic">
-                                <img src="./media/imgs/photos/mend01.jpg" width="50%"></img>
+                                <img src="./media/imgs/photos/mend01.jpg" width="100%"></img>
                             </div>
                             <div class="see-more">
                                 <a href="./xtras/destinos/mendoza.html" class="btn">Ver mas</a>
@@ -546,7 +537,7 @@
                                 <h3 >Puerto Madryn</h3>
                             </div>
                             <div class="pic">
-                                <img src="./media/imgs/photos/mdry01.jpg" width="50%"></img>
+                                <img src="./media/imgs/photos/mdry01.jpg" width="100%"></img>
                             </div>
                             <div class="see-more">
                                 <a href="./xtras/destinos/puertomadryn.html" class="btn">Ver mas</a>
@@ -559,7 +550,7 @@
                                 <h3 >Salta y Jujuy</h3>
                             </div>
                             <div class="pic">
-                                <img src="./media/imgs/photos/saju01.jpg" width="50%"></img>
+                                <img src="./media/imgs/photos/saju01.jpg" width="100%"></img>
                             </div>
                             <div class="see-more">
                                 <a href="./xtras/destinos/saltayjujuy.html" class="btn">Ver mas</a>
@@ -572,7 +563,7 @@
                             <h3>Usuahia</h3>
                         </div>
                         <div class="pic">
-                            <img src="./media/imgs/photos/usu01.jpg" width="50%"></img>
+                            <img src="./media/imgs/photos/usu01.jpg" width="100%"></img>
                         </div>
                         <div class="see-more">
                             <a href="./xtras/destinos/usuahia.html" class="btn">Ver mas</a>
