--- a/xtras/destinos/calafate.html
+++ b/xtras/destinos/calafate.html
@@ -51,6 +51,15 @@
 
     <h4>Imagenes tomadas por nuestros huespedes</h4>
 
+      <div class="responsive">
+            <div class="gallery">
+              <div>
+                <img src="/media/imgs/photos/cala00.jpg" alt="Cinque Terre" width="600" height="400">
+              </div>
+              <div class="desc">Add</div>
+            </div>
+          </div>
+
     <div class="responsive">
       <div class="gallery">
         <div>
