--- a/xtras/destinos/mendoza.html
+++ b/xtras/destinos/mendoza.html
@@ -50,6 +50,15 @@
     <div class="responsive">
       <div class="gallery">
         <div>
+          <img src="/media/imgs/photos/mend00.jpg" alt="Cinque Terre" width="600" height="400">
+        </div>
+        <div class="desc">Add</div>
+      </div>
+    </div>
+
+    <div class="responsive">
+      <div class="gallery">
+        <div>
           <img src="/media/imgs/photos/mend01.jpg" alt="Cinque Terre" width="600" height="400">
         </div>
         <div class="desc">Add</div>
