--- a/xtras/destinos/puertomadryn.html
+++ b/xtras/destinos/puertomadryn.html
@@ -56,6 +56,15 @@
     <div class="responsive">
       <div class="gallery">
         <div>
+          <img src="/media/imgs/photos/mdry00.jpg" alt="Cinque Terre" width="600" height="400">
+        </div>
+        <div class="desc">Add</div>
+      </div>
+    </div>
+
+  <div class="responsive">
+      <div class="gallery">
+        <div>
           <img src="/media/imgs/photos/mdry01.jpg" alt="Cinque Terre" width="600" height="400">
         </div>
         <div class="desc">Add</div>
