--- a/xtras/destinos/bariloche.html
+++ b/xtras/destinos/bariloche.html
@@ -52,6 +52,15 @@
     <div class="responsive">
       <div class="gallery">
         <div>
+          <img src="/media/imgs/photos/bari00.jpg" alt="Cinque Terre" width="600" height="400">
+        </div>
+        <div class="desc">Add</div>
+      </div>
+    </div>
+
+    <div class="responsive">
+      <div class="gallery">
+        <div>
           <img src="/media/imgs/photos/bari01.jpg" alt="Cinque Terre" width="600" height="400">
         </div>
         <div class="desc">Add</div>
