--- a/xtras/destinos/cataratas.html
+++ b/xtras/destinos/cataratas.html
@@ -52,6 +52,15 @@
     <div class="responsive">
       <div class="gallery">
         <div>
+          <img src="/media/imgs/photos/cata00.jpg" alt="Cinque Terre" width="600" height="400">
+        </div>
+        <div class="desc">Add</div>
+      </div>
+    </div>
+
+  <div class="responsive">
+      <div class="gallery">
+        <div>
           <img src="/media/imgs/photos/cata01.jpg" alt="Cinque Terre" width="600" height="400">
         </div>
         <div class="desc">Add</div>
