--- a/xtras/destinos/saltayjujuy.html
+++ b/xtras/destinos/saltayjujuy.html
@@ -53,6 +53,15 @@
     <h4>Imagenes tomadas por nuestros huespedes</h4>
 
     <div class="responsive">
+          <div class="gallery">
+            <div>
+              <img src="/media/imgs/photos/saju00.jpg" alt="Cinque Terre" width="600" height="400">
+            </div>
+          <div class="desc">Add</div>
+        </div>
+      </div>
+
+    <div class="responsive">
       <div class="gallery">
         <div>
           <img src="/media/imgs/photos/saju01.jpg" alt="Cinque Terre" width="600" height="400">
